# py_urban_footprint

./: README.md  analysis.html  analysis.qmd  pyproject.toml
data/: crops.csv  farms.csv  infrastructure.csv
src/py_urban_footprint/: __init__.py  funs.py
